--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -71,6 +71,22 @@
   howpublished = {https://www.zotero.org/download/}
 }
 
+@article{Abeele_Mechanisms_2001,
+  title = {Mechanisms for Sensorimotor Adaptation to Rotated Visual Input},
+  author = {Abeele, Sylvie and Bock, Otmar},
+  year = {2001},
+  month = jul,
+  journal = {Experimental Brain Research},
+  volume = {139},
+  number = {2},
+  pages = {248--253},
+  issn = {1432-1106},
+  doi = {10.1007/s002210100768},
+  abstract = {Using the multiple-exposure approach, we investigated sensorimotor adaptation by exposing human subjects to different angles of visual rotation in a tracking task. Generally, the tracking error was high at the onset of the visual rotation and gradually declined towards the baseline level during the exposure period. In experiment A, we confirmed that the initial tracking error increases more than proportionally with the angle of rotation. In experiment C, we were unable to confirm intermanual transfer, and attribute this discrepancy with previous literature to details of the experimental tasks. In our main experiment, B, we found that pre-exposure to 45\textdegree{} or 60\textdegree{} of visual rotation facilitated the subsequent adaptation to a 90\textdegree{} rotation, with the facilitatory effect being more pronounced following the 60\textdegree{} rotation. We interpret this finding as evidence that adaptation is achieved by a gradual process, which progresses from small angles of output transformation through intermediate values up to the prescribed angle of rotation.},
+  language = {en},
+  keywords = {gradual}
+}
+
 @article{Abraham_Maintaining_2004,
   title = {Maintaining {{Accuracy}} at the {{Expense}} of {{Speed}}: {{Stimulus Similarity Defines Odor Discrimination Time}} in {{Mice}}},
   shorttitle = {Maintaining {{Accuracy}} at the {{Expense}} of {{Speed}}},
@@ -123,6 +139,22 @@
   abstract = {The descending projections from motor cortex share many features with top-down or backward connections in visual cortex; for example, corticospinal projections originate in infragranular layers, are highly divergent and (along with descending cortico-cortical projections) target cells expressing NMDA receptors. This is somewhat paradoxical because backward modulatory characteristics would not be expected of driving motor command signals. We resolve this apparent paradox using a functional characterisation of the motor system based on Helmholtz's ideas about perception; namely, that perception is inference on the causes of visual sensations. We explain behaviour in terms of inference on the causes of proprioceptive sensations. This explanation appeals to active inference, in which higher cortical levels send descending proprioceptive predictions, rather than motor commands. This process mirrors perceptual inference in sensory cortex, where descending connections convey predictions, while ascending connections convey prediction errors. The anatomical substrate of this recurrent message passing is a hierarchical system consisting of functionally asymmetric driving (ascending) and modulatory (descending) connections: an arrangement that we show is almost exactly recapitulated in the motor system, in terms of its laminar, topographic and physiological characteristics. This perspective casts classical motor reflexes as minimising prediction errors and may provide a principled explanation for why motor cortex is agranular.},
   pmcid = {PMC3637647},
   pmid = {23129312}
+}
+
+@article{Addou_Colored_2011,
+  title = {Colored Context Cues Can Facilitate the Ability to Learn and to Switch between Multiple Dynamical Force Fields},
+  author = {Addou, Touria and Krouchev, Nedialko and Kalaska, John F.},
+  year = {2011},
+  month = jul,
+  journal = {Journal of Neurophysiology},
+  volume = {106},
+  number = {1},
+  pages = {163--183},
+  publisher = {{American Physiological Society}},
+  issn = {0022-3077},
+  doi = {10.1152/jn.00869.2010},
+  abstract = {We tested the efficacy of color context cues during adaptation to dynamic force fields. Four groups of human subjects performed elbow flexion/extension movements to move a cursor between targets on a monitor while encountering a resistive (Vr) or assistive (Va) viscous force field. They performed two training sets of 256 trials daily, for 10 days. The monitor background color changed (red, green) every four successful trials but provided different degrees of force field context information to each group. For the irrelevant-cue groups, the color changed every four trials, but one group encountered only the Va field and the other only the Vr field. For the reliable-cue group, the force field alternated between Va and Vr each time the monitor changed color (Vr, red; Va, green). For the unreliable-cue group, the force field changed between Va and Vr pseudorandomly at each color change. All subjects made increasingly stereotyped movements over 10 training days. Reliable-cue subjects typically learned the association between color cues and fields and began to make predictive changes in motor output at each color change during the first day. Their performance continued to improve over the remaining days. Unreliable-cue subjects also improved their performance across training days but developed a strategy of probing the nature of the field at each color change by emitting a default motor response and then adjusting their motor output in subsequent trials. These findings show that subjects can extract explicit and implicit information from color context cues during force field adaptation.},
+  keywords = {contextual cues,force field adaptation,human,implicit and explicit cues,motor learning}
 }
 
 @article{Afraimovich_origin_2004,
@@ -1837,6 +1869,21 @@
   keywords = {Elicitation methods,Experimental methodology,Risk preferences}
 }
 
+@article{Cheng_Efficient_2020,
+  title = {Towards {{Efficient Human}}-{{Robot Collaboration With Robust Plan Recognition}} and {{Trajectory Prediction}}},
+  author = {Cheng, Yujiao and Sun, Liting and Liu, Changliu and Tomizuka, Masayoshi},
+  year = {2020},
+  month = apr,
+  journal = {IEEE Robotics and Automation Letters},
+  volume = {5},
+  number = {2},
+  pages = {2602--2609},
+  issn = {2377-3766},
+  doi = {10.1109/LRA.2020.2972874},
+  abstract = {Human-robot collaboration (HRC) is becoming increasingly important as the paradigm of manufacturing is shifting from mass production to mass customization. The introduction of HRC can significantly improve the flexibility and intelligence of automation. To efficiently finish tasks in HRC systems, the robots need to not only predict the future movements of human, but also more high-level plans, i.e., the sequence of actions to finish the tasks. However, due to the stochastic and time-varying nature of human collaborators, it is quite challenging for the robot to efficiently and accurately identify such task plans and respond in a safe manner. To address this challenge, we propose an integrated human-robot collaboration framework. Both plan recognition and trajectory prediction modules are included for the generation of safe and efficient robotic motions. Such a framework enables the robots to perceive, predict and adapt their actions to the human's work plan and intelligently avoid collisions with the human. Moreover, by explicitly leveraging the hierarchical relationship between plans and trajectories, more robust plan recognition performance can be achieved. Physical experiments were conducted on an industrial robot to verify the proposed framework. The results show that the proposed framework could accurately recognize the human workers' plans and thus significantly improve the time efficiency of the HRC team even in the presence of motion classification noises.},
+  keywords = {assembly,Collaboration,Collision avoidance,Fans,human-centered robotics,Industrial robots,recognition,Service robots,Task analysis,Trajectory}
+}
+
 @article{Choi_Consistency_2007,
   title = {Consistency and {{Heterogeneity}} of {{Individual Behavior}} under {{Uncertainty}}},
   author = {Choi, Syngjoo and Fisman, Raymond and Gale, Douglas and Kariv, Shachar},
@@ -1982,6 +2029,40 @@
   copyright = {Copyright \textcopyright{} 1996 the American Physiological Society},
   language = {en},
   pmid = {8930237}
+}
+
+@article{Cothros_Distinct_2008,
+  title = {Distinct {{Haptic Cues Do Not Reduce Interference}} When {{Learning}} to {{Reach}} in {{Multiple Force Fields}}},
+  author = {Cothros, Nicholas and Wong, Jeremy and Gribble, Paul L.},
+  year = {2008},
+  month = apr,
+  journal = {PLOS ONE},
+  volume = {3},
+  number = {4},
+  pages = {e1990},
+  publisher = {{Public Library of Science}},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0001990},
+  abstract = {BackgroundPrevious studies of learning to adapt reaching movements in the presence of novel forces show that learning multiple force fields is prone to interference. Recently it has been suggested that force field learning may reflect learning to manipulate a novel object. Within this theoretical framework, interference in force field learning may be the result of static tactile or haptic cues associated with grasp, which fail to indicate changing dynamic conditions. The idea that different haptic cues (e.g. those associated with different grasped objects) signal motor requirements and promote the learning and retention of multiple motor skills has previously been unexplored in the context of force field learning.Methodology/Principle FindingsThe present study tested the possibility that interference can be reduced when two different force fields are associated with differently shaped objects grasped in the hand. Human subjects were instructed to guide a cursor to targets while grasping a robotic manipulandum, which applied two opposing velocity-dependent curl fields to the hand. For one group of subjects the manipulandum was fitted with two different handles, one for each force field. No attenuation in interference was observed in these subjects relative to controls who used the same handle for both force fields.Conclusions/SignificanceThese results suggest that in the context of the present learning paradigm, haptic cues on their own are not sufficient to reduce interference and promote learning multiple force fields.},
+  language = {en},
+  keywords = {Arms,Hands,Human learning,Learning,Retraining,Robotics,Robots,Screening guidelines}
+}
+
+@article{Cothros_Visual_2009,
+  title = {Visual Cues Signaling Object Grasp Reduce Interference in Motor Learning},
+  author = {Cothros, Nicholas and Wong, Jeremy and Gribble, Paul L.},
+  year = {2009},
+  month = oct,
+  journal = {Journal of Neurophysiology},
+  volume = {102},
+  number = {4},
+  pages = {2112--2120},
+  issn = {1522-1598},
+  doi = {10.1152/jn.00493.2009},
+  abstract = {Recent motor learning studies show that human subjects and nonhuman primates form neural representations of novel mechanical environments and associated forces. Whereas proficient adaptation is seen for a single force field, when faced with multiple novel force environments, movement performance and in particular the ability to switch between different force environments declines. It is difficult to reconcile these findings with the notion that primates can proficiently switch between multiple motor skills. Conceivably, particular kinds of sensory, cognitive, or perceptual contextual cues are required. This study examined the effect of visual feedback on motor learning, in particular, cues that simulated interaction with a virtual object. A robot arm was used to deliver novel patterns of forces (force fields) to the limb during reaching movements. We tested the possibility that subjects transition more easily between novel forces and their sudden absence when they are accompanied by visual cues that relate to object grasp. We used a virtual display system to present subjects with different kinds of visual feedback during reaching, including illusory feedback, indicating grasp of a virtual object during reaching in the force field, and object release in the absence of forces. Throughout the experiment, subjects in fact maintained grasp of the robot. We found that, indeed, the most effective visual cues were those associating the force field with grasp of the virtual object and the absence of the force field with release of the object. Our findings show more broadly that specific visual cues can protect motor skills from interference.},
+  language = {eng},
+  pmid = {19657075},
+  keywords = {Adolescent,Adult,Cues,Feedback; Sensory,Hand,Humans,Learning,Motor Activity,Photic Stimulation,Psychomotor Performance,Psychophysics,Robotics,User-Computer Interface,Visual Perception,Young Adult}
 }
 
 @article{Coutureau_Inactivation_2003,
@@ -3302,6 +3383,21 @@
   abstract = {Odors evoke complex spatiotemporal responses in the insect antennal lobe (AL) and mammalian olfactory bulb. However, the behavioral relevance of spatiotemporal coding remains unclear. In the present work we combined behavioral analyses with calcium imaging of odor induced activity in the honeybee AL to evaluate the relevance of this temporal dimension in the olfactory code. We used a new way for evaluation of odor similarity of binary mixtures in behavioral studies, which involved testing whether a match of odor-sampling time is necessary between training and testing conditions for odor recognition during associative learning. Using graded changes in the similarity of the mixture ratios, we found high correlations between the behavioral generalization across those mixtures and a gradient of activation in AL output. Furthermore, short odor stimuli of 500 ms or less affected how well odors were matched with a memory template, and this time corresponded to a shift from a sampling-time-dependent to a sampling-time-independent memory. Accordingly, 375 ms corresponded to the time required for spatiotemporal AL activity patterns to reach maximal separation according to imaging studies. Finally, we compared spatiotemporal representations of binary mixtures in trained and untrained animals. AL activity was modified by conditioning to improve separation of odor representations. These data suggest that one role of reinforcement is to ``tune'' the AL such that relevant odors become more discriminable.},
   language = {en},
   pmid = {19692594}
+}
+
+@article{Fine_Neural_2017,
+  title = {Neural Oscillations Reflect Latent Learning States Underlying Dual-Context Sensorimotor Adaptation},
+  author = {Fine, Justin M. and Moore, Dalton and Santello, Marco},
+  year = {2017},
+  month = dec,
+  journal = {NeuroImage},
+  volume = {163},
+  pages = {93--105},
+  issn = {1053-8119},
+  doi = {10.1016/j.neuroimage.2017.09.026},
+  abstract = {Recent studies have suggested that individuals can form multiple motor memories when simultaneously adapting to multiple, but oppositely-oriented perturbations. These findings predict that individuals detect the change in learning context, allowing the selective initialization and update of motor memories. However, previous electrophysiological studies of sensorimotor adaptation have not identified a neural mechanism supporting the detection of a context switch and adaptation to separate contexts. Here, we tested the hypothesis that such a mechanism is identifiable through neural oscillations measured through EEG. Human participants learned to manipulate an object in two opposite contexts (mass distribution). This task was designed based on previous work showing that people can adapt to both contexts. We found that sensorimotor {$\alpha$} and {$\beta$}, and medial frontal \texttheta{} frequency bands all exhibited different response patterns with respect to the error in each context. To determine whether any frequency's responses to error were distinctly related to a switch in context, we predicted single-trial EEG data from a computational learning model that can adapt to multiple contexts simultaneously based on a switching mechanism. This analysis revealed that only medial frontal \texttheta{} was predicted by a component of the model state that adapts to errors based on a context switch. In contrast, {$\alpha$} and {$\beta$} were predicted by a model state that was updated from performance errors independent of the context. These findings provide novel evidence showing that sensorimotor and medial frontal oscillations are predicted by different adaptation processes, and that changes in medial frontal activity may indicate the formation of motor memories by responding to changes in learning context.},
+  language = {en},
+  keywords = {Computational modeling,EEG,Learning,Neural oscillations,Sensorimotor adaptation}
 }
 
 @article{Fischer_Sleep_2002,
@@ -4893,6 +4989,41 @@
   keywords = {unread}
 }
 
+@article{Howard_ContextDependent_2010,
+  title = {Context-{{Dependent Partitioning}} of {{Motor Learning}} in {{Bimanual Movements}}},
+  author = {Howard, Ian S. and Ingram, James N. and Wolpert, Daniel M.},
+  year = {2010},
+  month = oct,
+  journal = {Journal of Neurophysiology},
+  volume = {104},
+  number = {4},
+  pages = {2082--2091},
+  publisher = {{American Physiological Society}},
+  issn = {0022-3077},
+  doi = {10.1152/jn.00299.2010},
+  abstract = {Human subjects easily adapt to single dynamic or visuomotor perturbations. In contrast, when two opposing dynamic or visuomotor perturbations are presented sequentially, interference is often observed. We examined the effect of bimanual movement context on interference between opposing perturbations using pairs of contexts, in which the relative direction of movement between the two arms was different across the pair. When each perturbation direction was associated with a different bimanual context, such as movement of the arms in the same direction versus movement in the opposite direction, interference was dramatically reduced. This occurred over a short period of training and was seen for both dynamic and visuomotor perturbations, suggesting a partitioning of motor learning for the different bimanual contexts. Further support for this was found in a series of transfer experiments. Having learned a single dynamic or visuomotor perturbation in one bimanual context, subjects showed incomplete transfer of this learning when the context changed, even though the perturbation remained the same. In addition, we examined a bimanual context in which one arm was moved passively and show that the reduction in interference requires active movement. The sensory consequences of movement are thus insufficient to allow opposing perturbations to be co-represented. Our results suggest different bimanual movement contexts engage at least partially separate representations of dynamics and kinematics in the motor system.}
+}
+
+@article{Howard_Gone_2012,
+  title = {Gone in 0.6 {{Seconds}}: {{The Encoding}} of {{Motor Memories Depends}} on {{Recent Sensorimotor States}}},
+  shorttitle = {Gone in 0.6 {{Seconds}}},
+  author = {Howard, Ian S. and Ingram, James N. and Franklin, David W. and Wolpert, Daniel M.},
+  year = {2012},
+  month = sep,
+  journal = {Journal of Neuroscience},
+  volume = {32},
+  number = {37},
+  pages = {12756--12768},
+  publisher = {{Society for Neuroscience}},
+  issn = {0270-6474, 1529-2401},
+  doi = {10.1523/JNEUROSCI.5909-11.2012},
+  abstract = {Real-world tasks often require movements that depend on a previous action or on changes in the state of the world. Here we investigate whether motor memories encode the current action in a manner that depends on previous sensorimotor states. Human subjects performed trials in which they made movements in a randomly selected clockwise or counterclockwise velocity-dependent curl force field. Movements during this adaptation phase were preceded by a contextual phase that determined which of the two fields would be experienced on any given trial. As expected from previous research, when static visual cues were presented in the contextual phase, strong interference (resulting in an inability to learn either field) was observed. In contrast, when the contextual phase involved subjects making a movement that was continuous with the adaptation-phase movement, a substantial reduction in interference was seen. As the time between the contextual and adaptation movement increased, so did the interference, reaching a level similar to that seen for static visual cues for delays {$>$}600 ms. This contextual effect generalized to purely visual motion, active movement without vision, passive movement, and isometric force generation. Our results show that sensorimotor states that differ in their recent temporal history can engage distinct representations in motor memory, but this effect decays progressively over time and is abolished by {$\sim$}600 ms. This suggests that motor memories are encoded not simply as a mapping from current state to motor command but are encoded in terms of the recent history of sensorimotor states.},
+  chapter = {Articles},
+  copyright = {Copyright \textcopyright{} 2012 the authors 0270-6474/12/3212756-13\$15.00/0. This article is freely available online through the J Neurosci Open Choice option.},
+  language = {en},
+  pmid = {22972999}
+}
+
 @article{Hu_Functional_2010,
   title = {Functional Feedback from Mushroom Bodies to Antennal Lobes in the {{Drosophila}} Olfactory Pathway},
   author = {Hu, Aiqun and Zhang, Wei and Wang, Zuoren},
@@ -5001,6 +5132,21 @@
   abstract = {How can neural activity propagate through cortical networks built with weak, stochastic synapses? We find precise repetitions of spontaneous patterns of synaptic inputs in neocortical neurons in vivo and in vitro. These patterns repeat after minutes, maintaining millisecond accuracy. Calcium imaging of slices reveals reactivation of sequences of cells during the occurrence of repeated intracellular synaptic patterns. The spontaneous activity drifts with time, engaging different cells. Sequences of active neurons have distinct spatial structures and are repeated in the same order over tens of seconds, revealing modular temporal dynamics. Higher order sequences are replayed with compressed timing.},
   language = {en},
   pmid = {15105494}
+}
+
+@article{Imamizu_Explicit_2007,
+  title = {Explicit Contextual Information Selectively Contributes to Predictive Switching of Internal Models},
+  author = {Imamizu, Hiroshi and Sugimoto, Norikazu and Osu, Rieko and Tsutsui, Kiyoka and Sugiyama, Kouichi and Wada, Yasuhiro and Kawato, Mitsuo},
+  year = {2007},
+  month = aug,
+  journal = {Experimental Brain Research},
+  volume = {181},
+  number = {3},
+  pages = {395--408},
+  issn = {1432-1106},
+  doi = {10.1007/s00221-007-0940-1},
+  abstract = {Many evidences suggest that the central nervous system (CNS) acquires and switches internal models for adaptive control in various environments. However, little is known about the neural mechanisms responsible for the switching. A recent computational model for simultaneous learning and switching of internal models proposes two separate switching mechanisms: a predictive mechanism purely based on contextual information and a postdictive mechanism based on the difference between actual and predicted sensorimotor feedbacks. This model can switch internal models solely based on contextual information in a predictive fashion immediately after alteration of the environment. Here we show that when subjects simultaneously adapted to alternating blocks of opposing visuomotor rotations, explicit contextual information about the rotations improved the initial performance at block alternations and asymptotic levels of performance within each block but not readaptation speeds. Our simulations using separate switching mechanisms duplicated these effects of contextual information on subject performance and suggest that improvement of initial performance was caused by improved accuracy of the predictive switch while adaptation speed corresponds to a switch dependent on sensorimotor feedback. Simulations also suggested that a slow change in output signals from the switching mechanisms causes contamination of motor commands from an internal model used in the previous context (anterograde interference) and partial destruction of internal models (retrograde interference). Explicit contextual information prevents destruction and assists memory retention by improving the changes in output signals. Thus, the asymptotic levels of performance improved.},
+  language = {en}
 }
 
 @article{Imamizu_Neural_2008,
@@ -10614,6 +10760,22 @@
   author = {Wan, Eric A. and {van der Merwe}, Rudolph},
   year = {2001},
   publisher = {{John Wiley \& Sons, Inc.}}
+}
+
+@article{Wang_Concurrent_2014,
+  title = {Concurrent Adaptation to Opposite Visual Distortions: Impairment and Cue},
+  shorttitle = {Concurrent Adaptation to Opposite Visual Distortions},
+  author = {Wang, Lei and M{\"u}sseler, Jochen},
+  year = {2014},
+  month = jul,
+  journal = {Psychological Research},
+  volume = {78},
+  number = {4},
+  pages = {453--464},
+  issn = {1430-2772},
+  doi = {10.1007/s00426-013-0500-1},
+  abstract = {The present study compared single and dual adaptation to visuomotor rotations in different cueing conditions. Participants adapted either to a constant rotation or to opposing rotations (dual adaptation) applied in an alternating order. In Experiment 1, visual and corresponding postural cues were provided to indicate different rotation directions. In Experiment 2, either a visual or a postural cue was available. In all cueing conditions, substantial dual adaptation was observed, although it was attenuated in comparison to single adaptation. Analysis of switching costs determined as the performance difference between the last trial before and the first trial after the change of rotation direction suggested substantial advantage of the visual cue compared to the postural cue, which was in line with previous findings demonstrating the dominance of visual sense in movement representation and control.},
+  language = {en}
 }
 
 @article{Wang_Effort_2017,
