Minor changes to abstract

--- a/adaptation/article/article.tex
+++ b/adaptation/article/article.tex
@@ -47,12 +47,13 @@
 \maketitle
 
 \abstract{Abstract}
- Humans are able to adapt their movements to changes in the dynamics of the environment and of their own bodies, a phenomenon known as motor adaptation. Motor adaptation has been shown to be contextual in experiments in which participants must learn to adapt to different modified dynamics, and must be able to switch between the learned adaptations dynamically. In real life, the information that we use to determine how to perform a task is often incomplete or misleading, which affects our ability to switch between tasks. In this work, we focus on the behavioral phenomena effected by imperfect contextual information and present a hierarchical computational model for motor adaptation based on exact Bayesian inference, which explicitly takes into account contextual information and how the dynamics of context inference affect learning and action selection. We show how our model provides a unifying explanation for the effects of sensory cues and proprioceptive information on switching between tasks, the effects of environmental volatility and predictability on learning, and the effects of previously-learned adaptations on switching between tasks, in addition to the well studied savings, de-adaptation and spontaneous recovery.
+Humans have been shown to adapt their movements when a sudden change to the dynamics of the environment is introduced, a phenomenon called motor adaptation. If the change is reverted, the adaptation is also quickly reverted. Human are also able to adapt to multiple changes in dynamics presented separately, and to be able to switch between adapted movements on the fly. Such switching relies on contextual information which is often noisy or misleading, which affects the switch between adaptations. In this work, we focus on the behavioral phenomena effected by imperfect contextual information and present a hierarchical computational model for motor adaptation based on exact Bayesian inference, which explicitly takes into account contextual information and how the dynamics of context inference affect learning and action selection. We show how our model provides a unifying explanation for the effects of sensory cues and proprioceptive information on switching between tasks, the effects of environmental volatility and predictability on learning, and the effects of previously-learned adaptations on switching between tasks, in addition to the well studied savings, de-adaptation and spontaneous recovery.
+
 
 \section{Introduction}
 Humans are able to adapt movements to changing dynamics of the environment and of the body itself. We adapt to slow changes in our body dynamics, e.g. because of muscle exhaustion throughout the day, but we can also adapt to sudden changes in the environment. For example, when picking up a heavy object, we must adapt our motor commands to be able to move the extra weight safely. Even before picking it up, the size and material of an object provide us with contextual information which we can use to prepare the correct posture for moving the object. However, contextual information cannot always be relied on, e.g. a big object of unknown material.
 
-It has been shown that humans can learn multiple tasks during the course of a single experiment, as well as learn to adapt to often-opposing modifications to the dynamics of movements \citep[e.g.][]{Gandolfo_Motor_1996,Shadmehr_Functional_1997}, although interference can occur between tasks \citep[e.g.][]{Brashers-Krug_Consolidation_1996,Sing_Reduction_2010}, which slows down learning. Additionally, humans have been shown to dynamically switch between different learned tasks \citep[e.g.][]{Davidson_Scaling_2004,Ethier_Spontaneous_2008,Lee_Dual_2009}. The mechanisms behind these switches, the specifics of how these switches manifest in behavior, and the ways in which switching can be impeded or improved, are still an active topic of research.
+It has been shown that humans can learn multiple tasks during the course of a single experiment, as well as learn to adapt to often-opposing modifications to the dynamics of movements \citep[e.g.][]{Gandolfo_Motor_1996,Shadmehr_Functional_1997}, although interference between tasks can slow down learning \citep[e.g.][]{Brashers-Krug_Consolidation_1996,Sing_Reduction_2010}. Additionally, humans have been shown to dynamically switch between different learned adaptation \citep[e.g.][]{Davidson_Scaling_2004,Ethier_Spontaneous_2008,Lee_Dual_2009}. The mechanisms behind these switches, the specifics of how these switches manifest in behavior, and the ways in which switching can be impeded or improved, are still an active topic of research.
 
 In order to study motor adaptation, motor error is defined in experiments as the deviation between the observed movements of a participant and a baseline movement. For example, in experiments with a mechanical arm \citep[e.g.][]{Gandolfo_Motor_1996}, a correlation coefficient can be defined between the movements when the mechanical arm exerts a force and the movements when it does not; the higher the correlation coefficient, the lower the error. Other examples include measuring the force profile in error-clamp trials \citep{Smith_Interacting_2006}, endpoint errors in visuomotor rotations \citep{Kim_Neural_2015} and saccade adaptation \citep{Catz_Cerebellardependent_2008}.
 
